--- a/project.yml
+++ b/project.yml
@@ -80,6 +80,9 @@ sidebar:
       url: /reference-provider-integrations.html
     - title: Legal notices
       url: /legal-notices.html
+product-family:
+  name: BlueXP
+  repo: bluexp-family
 homepage:
   tiles:
     - title: Get started
