--- a/_index.yml
+++ b/_index.yml
@@ -2,7 +2,7 @@ indexpage:
   title: Cloud Volumes ONTAP 9.9.0 Release Notes
   lead: These release notes describe new features, limitations, and known issues for Cloud Volumes ONTAP 9.9.0.
   summary: These release notes describe new features, limitations, and known issues for Cloud Volumes ONTAP 9.9.0.
-  keywords: ontap, documentation, e-series, cloud, 990
+  keywords: cloud volumes ontap, licensing, security, release notes, storage, data protection, configuration, upgrade, encryption, cvo, 990
   tiles:
     - title: Get started
       links:
