--- a/_index.yml
+++ b/_index.yml
@@ -1,5 +1,5 @@
 indexpage:
-  title: Cloud Volumes ONTAP 9.9.0 Release Notes
+  title: Cloud Volumes ONTAP 9.9.0 release notes
   lead: These release notes describe new features, limitations, and known issues for Cloud Volumes ONTAP 9.9.0.
   summary: These release notes describe new features, limitations, and known issues for Cloud Volumes ONTAP 9.9.0.
   keywords: cloud volumes ontap, licensing, security, release notes, storage, data protection, configuration, upgrade, encryption, cvo, 990
